--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" 
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" 
     crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>login form</title>
 </head>
 <body>
@@ -13,17 +14,17 @@
         <div class="header">
             <h2>Setup Account</h2>
         </div>
-        <div class="form" id="form">
-            <div class="form-control">
-              <label>Username</label>
+        <form class="form" id="form">
+            <div class="form-control success">
+              <label>Username:</label>
               <input type="text" placeholder="kelvinkirima014" id="username">
               <i class = "fas fa-check-circle"></i>
               <i class = "fas fa-exclamation-circle"></i>
               <small>Error message</small>
             </div>
 
-            <div class="form-control">
-                <label>Email</label>
+            <div class="form-control error">
+                <label>Email:</label>
                 <input type="email" placeholder="kelvinkirima2@gmail.com" id="email">
                 <i class = "fas fa-check-circle"></i>
                 <i class = "fas fa-exclamation-circle"></i>
@@ -31,20 +32,26 @@
               </div>
 
               <div class="form-control">
-                <label>Password</label>
+                <label>Password:</label>
                 <input type="password" placeholder="kelvin14" id="password">
                 <i class = "fas fa-check-circle"></i>
                 <i class = "fas fa-exclamation-circle"></i>
                 <small>Error message</small>
               </div>
               <div class="form-control">
-                <label>Confirm password</label>
+                <label>Confirm password:</label>
                 <input type="password" placeholder="kelvin14" id="password2">
                 <i class = "fas fa-check-circle"></i>
                 <i class = "fas fa-exclamation-circle"></i>
                 <small>Error message</small>
               </div>
-        </div>
+
+              <button>Submit</button>
+        </form>
+
+      
+       
     </div>
+    <script src="login.js"></script>
 </body>
 </html>
