--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Setup Account</h2>
+            <h1>Setup Account</h1>
         </div>
         <form class="form" id="form">
             <div class="form-control success">
-              <label>Username:</label>
+              <label for ="username">Username:</label>
               <input type="text" placeholder="kelvinkirima014" id="username">
               <i class = "fas fa-check-circle"></i>
               <i class = "fas fa-exclamation-circle"></i>
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-control error">
-                <label>Email:</label>
+                <label for ="email">Email:</label>
                 <input type="email" placeholder="kelvinkirima2@gmail.com" id="email">
                 <i class = "fas fa-check-circle"></i>
                 <i class = "fas fa-exclamation-circle"></i>
@@ -32,14 +32,14 @@
               </div>
 
               <div class="form-control">
-                <label>Password:</label>
+                <label for = "password">Password:</label>
                 <input type="password" placeholder="kelvin14" id="password">
                 <i class = "fas fa-check-circle"></i>
                 <i class = "fas fa-exclamation-circle"></i>
                 <small>Error message</small>
               </div>
               <div class="form-control">
-                <label>Confirm password:</label>
+                <label for="password2">Confirm password:</label>
                 <input type="password" placeholder="kelvin14" id="password2">
                 <i class = "fas fa-check-circle"></i>
                 <i class = "fas fa-exclamation-circle"></i>
