--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Setup Account</h1>
         </div>
         <form class="form" id="form">
-            <div class="form-control success">
+            <div class="form-control ">
               <label for ="username">Username:</label>
               <input type="text" placeholder="kelvinkirima014" id="username">
               <i class = "fas fa-check-circle"></i>
@@ -23,7 +23,7 @@
               <small>Error message</small>
             </div>
 
-            <div class="form-control error">
+            <div class="form-control ">
                 <label for ="email">Email:</label>
                 <input type="email" placeholder="kelvinkirima2@gmail.com" id="email">
                 <i class = "fas fa-check-circle"></i>
